--- a/src/main/resources/templates/project/recruit_detail.html
+++ b/src/main/resources/templates/project/recruit_detail.html
@@ -135,7 +135,7 @@
             ....
           </p>
         </div>
-        <p class="title-contents app">🖐 참가 신청자 목록 <strong>5명</strong><i class="fa-solid fa-circle-info"></i></p>
+        <p class="title-contents app">🖐 참가 신청자 목록&nbsp; <i class="fa-solid fa-circle-info"></i></p>
         <div class="app-wrap">
           <div class="application-box" th:each="member : ${project.getMembers()}">
             <div class="profile-top">
