--- a/src/main/resources/static/css/create.css
+++ b/src/main/resources/static/css/create.css
@@ -403,20 +403,23 @@ h3 {
   display: flex;
   align-items: center;
   padding: 5px 10px;
-  border: 1px solid #00dada;
+  border: 1px solid var(--main-color);
   border-radius: 15px;
-  background-color: #00dada;
+  background-color: var(--main-color);
   color: #ffffff;
-  margin-right: 10px;
-  margin-bottom: 15px;
   flex: 0 0 auto;
-  /* 아이템이 고정된 너비로 나타나도록 */
+  font-size: 0.815rem;
 }
 
 .remove-btn {
   margin-left: 5px;
   cursor: pointer;
   color: #ffffff;
+}
+.project-type{
+  padding: 12px 17px;
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
 }
 
 /* 특정 컨테이너에만 적용하도록 조정 */
@@ -425,4 +428,6 @@ h3 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 8px 10px;
+  margin-bottom: 15px;
 }
