--- a/src/main/resources/templates/project/recruit_create.html
+++ b/src/main/resources/templates/project/recruit_create.html
@@ -33,73 +33,77 @@
 <main>
   <div class="wrap flex">
     <div class="rc-input">
-      <form action="#" method="post">
-        <span class="pj-type pj">사이드 프로젝트</span>
-        <input class="rc-title" type="text" placeholder="제목을 입력하세요" maxlength="50"/>
+      <form action="/project/create" method="post">
+<!--        <span class="pj-type pj">사이드 프로젝트</span>-->
+        <select name="projectType" class="proeject-type">
+          <option value="사이드 프로젝트">사이드 프로젝트</option>
+          <option value="모집/스터디">모집/스터디</option>
+        </select>
+        <input class="rc-title" type="text" name="projectName" placeholder="제목을 입력하세요" maxlength="50"/>
         <div class="rc-summarize">
           <p class="s-title">주제</p>
-          <textarea id="subject" rows="1" cols="20" placeholder="주제를 한 줄 이내로 간단하게 작성해주세요."></textarea>
+          <textarea id="subject" name="subject" rows="1" cols="20" placeholder="주제를 한 줄 이내로 간단하게 작성해주세요."></textarea>
         </div>
         <div class="cont-flex">
           <div>
-            <label for="" class="s-title">모집인원</label>
-            <select name="" id="">
-              <option value="">인원 미정</option>
-              <option value="">1명</option>
-              <option value="">2명</option>
-              <option value="">3명</option>
-              <option value="">4명</option>
-              <option value="">5명</option>
-              <option value="">6명</option>
-              <option value="">7명</option>
-              <option value="">8명</option>
-              <option value="">9명</option>
+            <label for="recruitCount" class="s-title">모집인원</label>
+            <select name="recruitCount" id="recruitCount">
+              <option value="0">인원 미정</option>
+              <option value="1">1명</option>
+              <option value="2">2명</option>
+              <option value="3">3명</option>
+              <option value="4">4명</option>
+              <option value="5">5명</option>
+              <option value="6">6명</option>
+              <option value="7">7명</option>
+              <option value="8">8명</option>
+              <option value="9">9명</option>
             </select>
           </div>
           <div>
-            <label for="" class="s-title">수행목적</label>
-            <select name="" id="">
-              <option value="">포트폴리오/직무 역량 강화</option>
-              <option value="">창업/수익 창출</option>
-              <option value="">재미/네트워킹</option>
-            </select>
-          </div>
-        </div>
-        <div class="cont-flex">
-          <div>
-            <label for="" class="s-title">참여시간</label>
-            <select name="" id="">
-              <option value="">매주 4시간 이하</option>
-              <option value="">매주 4 ~ 10시간</option>
-              <option value="">매주 10시간 이상</option>
-            </select>
-          </div>
-          <div>
-            <label for="" class="s-title">진행방식</label>
-            <select name="" id="">
-              <option value="">온라인</option>
-              <option value="">오프라인</option>
-              <option value="">온/오프라인</option>
+            <label for="projectPurpose" class="s-title">수행목적</label>
+            <select name="projectPurpose" id="projectPurpose">
+              <option value="포트폴리오/직무 역량 강화">포트폴리오/직무 역량 강화</option>
+              <option value="창업/수익 창출">창업/수익 창출</option>
+              <option value="재미/네트워킹">재미/네트워킹</option>
             </select>
           </div>
         </div>
         <div class="cont-flex">
           <div>
-            <label for="" class="s-title">예상기간</label>
-            <select name="" id="">
-              <option value="">1개월 이하</option>
-              <option value="">2개월</option>
-              <option value="">3개월</option>
-              <option value="">4개월</option>
-              <option value="">5개월</option>
-              <option value="">6개월</option>
-              <option value="">7개월</option>
-              <option value="">장기</option>
+            <label for="projectTime" class="s-title">참여시간</label>
+            <select name="projectTime" id="projectTime">
+              <option value="1">매주 4시간 이하</option>
+              <option value="2">매주 4 ~ 10시간</option>
+              <option value="3">매주 10시간 이상</option>
             </select>
           </div>
           <div>
-            <label for="" class="s-title">시작예정</label>
-            <input type="date">
+            <label for="projectProcess" class="s-title">진행방식</label>
+            <select name="projectProcess" id="projectProcess">
+              <option value="돈라인">온라인</option>
+              <option value="오프라인">오프라인</option>
+              <option value="온/오프라인">온/오프라인</option>
+            </select>
+          </div>
+        </div>
+        <div class="cont-flex">
+          <div>
+            <label for="exceptDate" class="s-title">예상기간</label>
+            <select name="exceptDate" id="exceptDate">
+              <option value="1">1개월 이하</option>
+              <option value="2">2개월</option>
+              <option value="3">3개월</option>
+              <option value="4">4개월</option>
+              <option value="5">5개월</option>
+              <option value="6">6개월</option>
+              <option value="7">7개월</option>
+              <option value="0">장기</option>
+            </select>
+          </div>
+          <div>
+            <label for="exceptTime" class="s-title">시작예정</label>
+            <input type="date" name="exceptTime" id="exceptTime">
           </div>
         </div>
         <div class="cont-flex">
@@ -108,15 +112,11 @@
             <div class="select-programs" id="stack-container">
               <!--아이콘 들어가는 곳-->
             </div>
-            <select name="stack" id="stack">
+            <select name="skills" id="stack">
               <option value="all">기술스택 선택</option>
               <option value="Java">Java</option>
-              <option value="C++">C++</option>
-              <option value="C#">C#</option>
               <option value="Python">Python</option>
               <option value="Spring">Spring</option>
-              <option value="HTML">HTML</option>
-              <option value="CSS">CSS</option>
               <option value="JS">JS</option>
               <option value="React">React</option>
               <option value="Vue.js">Vue.js</option>
@@ -133,18 +133,18 @@
             <div class="select-skills" id="skill-container">
               <!--아이콘 들어가는 곳-->
             </div>
-            <select name="skill" id="skill">
+            <select name="recruitRole" id="skill">
               <option value="all">전체</option>
-              <option value="frontend">프론트엔드</option>
-              <option value="backend">백엔드</option>
-              <option value="design">디자인</option>
-              <option value="opp">기회</option>
+              <option value="프론트엔드">프론트엔드</option>
+              <option value="백엔드">백엔드</option>
+              <option value="디자인">디자인</option>
+              <option value="기획">기획</option>
             </select>
           </div>
         </div>
         <div class="rc-project-info">
           <p class="s-title">소개</p>
-          <textarea cols="40" rows="15" placeholder="프로젝트 소개글을 작성하세요."></textarea>
+          <textarea cols="40" rows="15"  name="projectInfo" placeholder="프로젝트 소개글을 작성하세요."></textarea>
         </div>
         <button class="open-modal btn-write" type="button">작성완료</button>
         <!-- 모달창 -->
@@ -157,7 +157,7 @@
           <div class="button-wrap">
             <button class="close-modal">돌아가기</button>
             <!-- TODO: <button class="submit-modal" type="submit"> 백엔드 연결 후 수정 -->
-            <button class="submit-modal">
+            <button type="submit" class="submit-modal">
               등록하기
             </button>
           </div>
