--- a/src/main/resources/static/css/create.css
+++ b/src/main/resources/static/css/create.css
@@ -382,7 +382,7 @@ h3 {
 }
 
 /*직군 아이콘 설정*/
-.select-skills,
+.selected-skill,
 .select-programs {
   display: flex;
   flex-direction: row;
@@ -394,7 +394,7 @@ h3 {
 
 }
 
-.selected-item {
+.selected-programs {
   display: flex;
   align-items: center;
   padding: 5px 10px;
@@ -402,10 +402,8 @@ h3 {
   border-radius: 15px;
   background-color: var(--main-color);
   color: #ffffff;
-  margin-right: 10px;
-  margin-bottom: 15px;
   flex: 0 0 auto;
-  /* 아이템이 고정된 너비로 나타나도록 */
+  font-size:0.815rem;
 }
 
 .remove-btn {
