--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -530,3 +530,13 @@ select {
 #mypage-submit:hover {
     background-color: var(--main-hover-color);
 }
+
+.email {
+    width: 100%;
+    padding: 12px 8px;
+    border: 1px solid #D9D9D9;
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-top: 22px;
+    margin-bottom: 22px;
+}
