--- a/src/main/resources/templates/member/mypage_edit.html
+++ b/src/main/resources/templates/member/mypage_edit.html
@@ -31,26 +31,33 @@
         <img th:src="@{/img/cinnamoroll.jpeg}" alt="Profile Image">
       </div>
       <div class="form-container">
-        <form id="profile-form" th:action="@{/mypage/memberId}">
+        <form id="profile-form">
           <div class="edit-group">
             <h2>이름</h2>
-            <input type="text" id="name" disabled>
+            <input type="text" id="name" th:value="${member.username}" disabled>
           </div>
+
+          <div class="input-group">
+            <h2>이메일</h2>
+            <input id="email" class="email" th:value="${member.email}">
+          </div>
+
           <div class="form-group">
             <div class="input-group">
               <h2>경력</h2>
               <select id="experience-container">
                 <option class="experience" value="">--선택--</option>
-                <option class="experience" value="1">학생 / 취업준비생</option>
-                <option class="experience" value="2">신입</option>
-                <option class="experience" value="3">1~3년차</option>
-                <option class="experience" value="4">3~5년차</option>
-                <option class="experience" value="5">5년이상</option>
+                <option class="experience" th:selected="${member.career == 1}" value="1">학생 / 취업준비생</option>
+                <option class="experience" th:selected="${member.career == 2}" value="2">신입</option>
+                <option class="experience" th:selected="${member.career == 3}" value="3">1~3년차</option>
+                <option class="experience" th:selected="${member.career == 4}" value="4">3~5년차</option>
+                <option class="experience" th:selected="${member.career == 5}"value="5">5년이상</option>
               </select>
             </div>
             <div class="input-group">
               <h2>깃허브 레포지토리 링크<span id="charCount" class="maxlength">0/50</span></h2>
-              <input id="urlInput" class="sc-input" style="resize: none" type="text" name="title"
+              <input id="urlInput" th:value="${member.githubLink}" class="sc-input" style="resize: none" type="text"
+                     name="title"
                      maxlength="50"
                      placeholder="URL을 입력하세요."></input>
             </div>
@@ -61,17 +68,21 @@
               <div class="select-skills" id="skill-container">
                 <!--아이콘 들어가는 곳-->
               </div>
-              <select id="skill">
+              <select id="skill" th:switch="${member.position}">
                 <option value="">--선택--</option>
-                <option value="frontend">프론트엔드</option>
-                <option value="backend">백엔드</option>
-                <option value="designer">디자이너</option>
-                <option value="planner">기획자</option>
+                <option value="frontend" th:selected="${member.position == '프론트엔드'}">프론트엔드</option>
+                <option value="backend" th:selected="${member.position == '백엔드'}">백엔드</option>
+                <option value="designer" th:selected="${member.position == '디자이너'}">디자이너</option>
+                <option value="planner" th:selected="${member.position == '기획자'}">기획자</option>
               </select>
             </div>
             <div class="input-group">
-              <h2 class="section">분야</h2>
-              <div class="select-programs" id="stack-container">
+              <h2 class="section">기술스택</h2>
+              <div class="select-programs" id="stack-container" th:text="${member.skills}">
+                <div th:each="skill : ${member.skills}" class="skill-tag" data-value="${skill}">
+                  <span th:text="${skill}"></span>
+                  <span class="remove-btn" onclick="removeSkill(this)">x</span>
+                </div>
                 <!--아이콘 들어가는 곳-->
               </div>
               <select id="stack">
@@ -83,7 +94,7 @@
                 <option value="html">HTML</option>
                 <option value="typescript">TypeScript</option>
                 <option value="css">Css</option>
-                <option value="js">JS</option>
+                <option value="js">JavaScript</option>
                 <option value="spring">Spring</option>
                 <option value="react">React</option>
                 <option value="vue">Vue.js</option>
@@ -98,7 +109,8 @@
           </div>
           <div class="introduce">
             <h2>자기소개<span id="introCount" class="maxlength">0/150</span></h2>
-            <textarea id="introduceInput" class="introduce-input" style="resize: none" type="text"
+            <textarea id="introduceInput" th:text="${member.info}" class="introduce-input" style="resize: none"
+                      type="text"
                       name="title"
                       maxlength="150" placeholder="자기소개를 입력해주세요."></textarea>
           </div>
