--- a/src/main/resources/templates/project/recruit_detail.html
+++ b/src/main/resources/templates/project/recruit_detail.html
@@ -225,7 +225,8 @@
       <h3>모집을 완료하시겠습니까?</h3>
       <div class="button-wrap">
         <button class="close-modal-back">돌아가기</button>
-        <button class="submit-modal" type="submit">모집 완료하기</button>
+        <button class="submit-modal" type="submit" th:onclick="'recruitDone(\'' + ${project.getId()} + '\')'">모집 완료하기
+        </button>
       </div>
     </div>
     <div class="modal-bg bg02">
@@ -249,7 +250,6 @@
 <script>
     // 멤버추가버튼
     function memberInvite(memberId) {
-        console.log(memberId);
         $.ajax({
             type: "get",
             url: "/api/email/" + memberId,
@@ -259,6 +259,20 @@
         }).fail(error => {
             console.log("통신실패!", error);
         });
+    }
+
+    // 프로젝트 모집완료
+    function recruitDone(projectId){
+        console.log(projectId);
+        $.ajax({
+            type: "get",
+            url: `/api/recruit/${projectId}`,
+            dataType: "json"
+        }).done(res=>{
+            console.log(res);
+        }).fail(error=>{
+            console.log("통신실패!",error);
+        })
     }
 
     // 로그인안한 회원이 프로젝트참여신청, 북마크 클릭 시 호출
