--- a/src/main/resources/templates/project/recruit_create.html
+++ b/src/main/resources/templates/project/recruit_create.html
@@ -126,6 +126,7 @@
               <option value="Flask">Flask</option>
               <option value="Node.js">Node.js</option>
               <option value="TypeScript">TypeScript</option>
+              <!-- TODO : 기술스택 목록 수정해야함. recruit_detail.html 참고 -->
             </select>
           </div>
           <div>
