--- a/src/main/resources/templates/project/show_detail.html
+++ b/src/main/resources/templates/project/show_detail.html
@@ -109,7 +109,7 @@
                       <img th:case="'Svelte'" src="/img/svelte.svg" alt="Svelte"/>
                       <img th:case="'TypeScript'" src="/img/typescript.svg" alt="TypeScript"/>
                       <img th:case="'Vue'" src="/img/vue.svg" alt="Vue"/>
-                      <!-- 추가적인 스킬에 대한 case를 여기에 추가 -->
+                      <!-- TODO : 추가적인 스킬에 대한 case를 여기에 추가 -->
                       <span th:case="*">[[${skill}]]</span>
                     </th:block>
                   </li>
