--- a/src/main/resources/templates/project/recruit_detail.html
+++ b/src/main/resources/templates/project/recruit_detail.html
@@ -201,11 +201,12 @@
       </button>
       <!-- TODO : 북마크버튼 클릭 시 로그인한 유저가아니면 이동시켜야함 -->
       <button class="right-btn bookmark" onclick="loginWarning()"><i class="fa-regular fa-bookmark"></i>북마크</button>
-      <button class="right-btn confirm open-modal"
-              th:if="${session.loginMember != null && session.loginMember.getId()==project.getOwnerId()}"
-      >모집완료
-        하기
-      </button>
+      <button id="btnRecruitDone" class="right-btn confirm open-modal"
+              th:if="${session.loginMember != null && session.loginMember.getId()==project.getOwnerId() && project.getStatus()==1}"
+      >모집완료 하기</button>
+      <button id="btnRecruitDone" class="right-btn confirm-done open-modal"
+              th:if="${session.loginMember != null && session.loginMember.getId()==project.getOwnerId() && project.getStatus()==0}"
+      >모집완료</button>
 
       <div class="edit-btn">
         <!-- TODO : 프로젝트모집 수정 구현 시 컨트롤러 URL 입력 -->
@@ -248,6 +249,8 @@
     </div>
   </div>
 </main>
+<th:block th:if="${session.loginMember != null}"><div class="loginMember" th:text="${session.loginMember.getId()}" style="display: none"></div></th:block>
+<th:block th:if="${session.loginMember == null}"><div class="loginMember" style="display: none">0</div></th:block>
 <footer>
   <th:block th:replace="~{fragment/footer}"></th:block>
 </footer>
@@ -271,23 +274,42 @@
 
         console.log(projectId);
         $.ajax({
-            type: "post",
+            type: "patch",
             url: '/api/recruit/done',
             contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
-            data: {"projectId":projectId},
+            data: {"projectId": projectId},
             dataType: "json"
         }).done(res => {
             console.log(res);
+            if(res.data == 1){
+                // 모집완료
+                $("#btnRecruitDone").css("background-color", "var(--gray-font2)");
+                $("#btnRecruitDone").css("color", "color: #fff;");
+                $("#btnRecruitDone").text("모집완료");
+                document.querySelector(".modal-bg").classList.remove("visible");
+                document.querySelector(".modal").classList.remove("visible");
+            }else{
+                // 모집완료 취소
+                $("#btnRecruitDone").css("background-color", "var(--main-color)");
+                $("#btnRecruitDone").css("color", "color: #fff;");
+                $("#btnRecruitDone").text("모집완료 하기");
+                document.querySelector(".modal-bg").classList.remove("visible");
+                document.querySelector(".modal").classList.remove("visible");
+            }
         }).fail(error => {
             console.log("통신실패!", error);
         })
     }
 
-    // 로그인안한 회원이 프로젝트참여신청, 북마크 클릭 시 호출
-    function loginWarning() {
-        alert("로그인이 필요합니다 !")
-        // 로그인 페이지 이동
-        window.location.assign('/auth/login');
+    // TODO: 북마크 클릭 함수(기능 구현 필요)
+    function loginWarning(member) {
+        let memberId = document.querySelector(".loginMember").textContent;
+        if(memberId==0) {
+            alert("로그인이 필요합니다 !")
+            window.location.assign('/auth/login');
+        }
+        else
+            alert("북마크 완료 !");
     }
 
     // 모집완료 모달
