[#16]Feat: 마이페이지 DB 연동
기존 정보 가져오기(스킬빼고), 수정 정보 삭제 및 업데이트

resolved: #13

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -507,6 +507,10 @@ select {
     flex: 0 0 auto; /* 아이템이 고정된 너비로 나타나도록 */
 }
 
+.span, .projectSkill {
+    color: white;
+}
+
 .remove-btn {
     margin-left: 5px;
     cursor: pointer;
